# finstream-metaopt

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml  report.md  requirements.txt  test_predict.py
.github/workflows/: daily_evaluate.yml  daily_predict.yml  keep_alive.yml  manual_evaluate.yml
chatbot/: agentConfig.py  app.py  deployment.py  requirements.txt
chatbot/chalicelib/skills/finstream-context/: SKILL.md
chatbot/chalicelib/tools/: context.py
chatbot/tools/: __init__.py
data/processed/: baseline_evaluation_period.csv  test.csv  train.csv
models/: lightgbm.pkl  logistic.pkl  model_medium.pkl  model_old.pkl  model_recent.pkl  xgboost.pkl
results/: dashboard.html  drift_events.csv  static_results.csv  stream_results.csv
results/dashboard/: data.js
scripts/: poll_job_status.sh
src/: 02_train_models.py  03_stream_loop.py  04_dashboard.py  05_mho_council.py  07_scheduler.py  app.py  backfill.py  data_ingestion.py  dataset_splitting.py  diagnose_diversity.py  feature_engineering.py  firebase_client.py  pipeline.py  target_generation.py  yfinance_session.py
src/dashboard/: data_loader.py  html_generator.py  metrics.py  templates.py
src/dashboard/static/: app.js  index.html  styles.css
static/: index.html
static/css/: style.css
static/js/: api.js  app.js  charts.js  chatbot.js  firebase.js  handlers.js  live.js  loaders.js  renderers.js  store.js  utils.js
templates/: base.html  dashboard.html
